<resources>
    <string name="app_name">كنائس شبرا الشماليه</string>
    <string name="title_activity_login">Login</string>
    <string name="user_name">user name</string>
    <string name="password">كلمة المرور</string>
    <string name="login">Login</string>
    <string name="title_activity_home">الرئيسية</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="enter_new_member">ادخل عضو جديد</string>
    <string name="enter_new_user">ادخل مستخدم جديد</string>
    <string name="enter_new_parent">ادخل درجة قرابة جديدة</string>
    <string name="enter_new_qualification">ادخل مؤهل جديد</string>
    <string name="enter_new_job">ادخل وظيفة جديدة</string>
    <string name="enter_fathers">ادخل آباء الكنيسة</string>
    <string name="enter_meetings">ادخل اجتماعات الكنيسة</string>
    <string name="enter_new_street">ادخل شارع جديد</string>
    <string name="enter_new_area">ادخل منطقة جديدة</string>
    <string name="title_activity_enter_new_area">منطقة جديدة</string>
    <string name="title_activity_enter_new_street">شارع جديد</string>
    <string name="title_activity_enter_new_meeting">اضافة اجتماع</string>
    <string name="title_activity_enter_father">اضافة أب كاهن</string>
    <string name="title_activity_enter_new_job">وظيفة جديدة</string>
    <string name="title_activity_enter_qualifaction">مؤهل جديد</string>
    <string name="title_activity_enter_new_parent">صلة قرابة جديدة</string>
    <string name="title_activity_enter_new_user">مستخدم جديد</string>
    <string name="title_activity_enter_new_member">عضو جديد</string>
    <string name="the_job">الوظيفة</string>
    <string name="add_job">أضف وظيفة</string>
    <string name="the_qualification">المؤهل</string>
    <string name="add_qualification">أضف مؤهل</string>
    <string name="choose_church">أختر كنيسة...</string>
    <string name="name">الاسم</string>
    <string name="mobile_2">موبايل 2</string>
    <string name="mobile_1">موبايل 1</string>
    <string name="add_father">أضافة أب كاهن</string>
    <string name="area">المنطقة</string>
    <string name="add_area">أضافة منطقة</string>
    <string name="meeting">أجتماع</string>
    <string name="add_meeting">أضافة أجتماع</string>
    <string name="relationship">صلة القرابة</string>
    <string name="add_relationship">أضافة صلة قرابة</string>
    <string name="choose_area">أختر منطقة ...</string>
    <string name="choose_Father">أختر أب كاهن ...</string>
    <string name="street_name">أسم الشارع</string>
    <string name="street_saint">قديس الشارع</string>
    <string name="from">من</string>
    <string name="to">إلى</string>
    <string name="odd_numbers">الارقام الفردية</string>
    <string name="notes">ملاحظات</string>
    <string name="add_street">أضافة شارع</string>
    <string name="choose_Job">أختر وظيفة ...</string>
    <string name="choose_qualification">أختر مؤهل ...</string>
    <string name="meetings">الإجتماعات</string>
    <string name="cancel">إلغاء</string>

    <string name="fire_areas">areas</string>
    <string name="fire_fathers">fathers</string>
    <string name="fire_meetings">meetings</string>
    <string name="job_added">تم أضافة الوظيفه بنجاح</string>
    <string name="connection_error">حدث خطأ فى الاتصال بالانترنت</string>
    <string name="jobs">الوظائف</string>
    <string name="qualifications">المؤهلات الدراسيه</string>
    <string name="churchs">الكنائس</string>
    <string name="areas">المناطق</string>
    <string name="streets">الشوارع</string>
    <string name="fathers">الاباء الكهنه</string>
    <string name="empty_field">لم يتم اضافة اى بيانات</string>
    <string name="area_added">تم أضافة المنطقة</string>
    <string name="area_repeated">المنطقه موجوده بالفعل</string>
    <string name="job_repeated">هذه الوظيفه موجوده بالفعل</string>
    <string name="father_added">تم إضافة الاب الكاهن</string>
    <string name="fire_churchs">churchs</string>
    <string name="required_field">حقل مطلوب</string>
    <string name="fire_father_name">father_name</string>
    <string name="fire_street_data">streetData</string>
    <string name="fire_members">members</string>
    <string name="choose_Street">أختر شارع ...</string>
    <string name="hint_birthdate">تاريخ الميلاد</string>
    <string name="hint_baptism">تاريخ المعمودية</string>
    <string name="hint_mirrage">تاريخ الزواج</string>
    <string name="add_meetings">إضافة الاجتماعات</string>
    <string name="search">بحث</string>
    <string name="fire_member_name">member_name</string>
    <string name="fire_member_mobile_1">member_mobile_1</string>
    <string name="fire_member_mobile_2">member_mobile_2</string>
    <string name="fire_member_phone_1">member_phone_1</string>
    <string name="fire_member_phone_2">member_phone_2</string>
    <string name="fire_member_father">father</string>
    <string name="fire_member_job">member_job</string>
    <string name="fire_member_social_statue">member_social_status</string>
    <string name="fire_member_qualification">member_qualification</string>
    <string name="title_activity_search_result">نتائج البحث</string>
    <string name="edit">تعديل</string>
    <string name="app_mail">mail</string>
    <string name="fire_father_app_mail">father_app_mail</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="choose_meeting">أختر إجتماع ...</string>

</resources>
